public/assets/css/lareponse.css
/* ... */
body>footer #branding svg,
body>footer .bi {
    color: var(--bs-white);
    font-size: 1.5rem;
    margin: 0 0.5rem;
}

body>footer #sitemap {
    display: flex;
    gap: 3rem;
}

body>footer #sitemap ul {
    list-style: none;
    padding-left: 0;
}

body>footer #sitemap li a {
    text-transform: uppercase;
    color: var(--bs-white);
    white-space: pre;
}

body>footer #sitemap a:hover {
    color: var(--bs-primary);
}

body>footer #partenaires nav {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
}

body>footer #copyright {
    text-align: center;
    font-size: 0.9em;
    padding: 1rem;
}

#equipe-belge {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
    gap: 2rem;
}

#equipe-belge>*:first-child {
    grid-column: 1 / -1;
}

#equipe-belge article a:has(.avatar) {
    display: flex;

    width: 17rem;
    height: 17rem;
    overflow: hidden;
}

#equipe-belge article .avatar {
    width: 100%;
    object-fit: cover;
}

form.add-job fieldset>legend,
form.add-job fieldset>label {
    color: var(--bs-primary);
    font-size: 1rem;
}

form.add-job fieldset div {
    display: grid;
    grid-template-columns: min-content auto;
    gap: 0.5rem 1rem;
}

@media screen and (min-width: 768px) {
    form.add-job .checkboxes-fields {
        display: flex;
        flex-wrap: wrap;
        gap: 4rem;
    }
}


form.add-job fieldset {
    margin-top: 2rem;
}

form.add-job .free-fields {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
}

form.add-job .free-fields>* {
    flex-grow: 1;
}

form.add-job label:has(input) {
    display: block;
    color: #000;
}

form.add-job label input {
    margin-right: 0.7rem;
}


/* PRINT */
@media print {

    body>footer,
    .single-post-slider,
    #scroll-to-top,
    #share,
    #print,
    aside#meta {
        display: none !important;
        position: absolute;
        visibility: hidden;
    }

    #article-single header {
        margin-bottom: 2rem;
    }
}

div.embedVideo {
    display: flex;
    justify-content: center;
    align-items: center;
    background: black;
    padding: 1em 0;
}


.sib-form-container a {
    color: var(--primary);
    text-decoration: underline;
}

.sib-form .input {
    background: white;
    color: black;
}


#casting-single aside#meta {
    padding: 1.5rem 2rem;
}

#casting-single pre {
    font-size: 1.2rem;
    font-family: 'Poppins', sans-serif;
}

body>header svg {
    color: white;
}

body>header .navbar-toggler svg {
    width: 48px;
    height: 48px;
    color: var(--primary);
}

.meta-list svg {
    color: var(--primary);
}

svg.bi {
    width: 23px;
    height: 23px;
}


/* === AGENDA : CARD */

#listing-agenda .title-agenda {
    display: flex;
    flex-wrap: wrap;
    text-transform: uppercase;
    font-weight: bold;
}

article.event {
    display: flex;
    border-radius: 0.7rem;
    overflow: hidden;
    transition: 0.5s;
    position: relative;
    margin: 0 0.5em;
}

article.event h5 {
    color: black;
}

article.event .date-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: end;
    text-align: center;
    min-width: 7rem;
}

article.event .date-item span {
    width: 100%;
    padding: 0.75em;
    width: 100%;
    font-weight: 600;
}

article.event .date-item :first-child {
    font-size: 1.5rem;
}

article.event .date-item :last-child {
    font-size: 1rem;
    background: var(--bs-primary);
    color: var(--bs-white);
}

article.event .details {
    display: flex;
    justify-content: space-between;
    margin-right: 2rem;
    color: var(--secondary-dark);
}

article.event>div:last-child {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
}




/** COOKIES BANNER */
.cookie-banner {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background: #f8f9fa;
    padding: 1em;
    border-top: 2px solid var(--primary);
    text-align: center;
    z-index: 9999;
}

.cookie-banner button {
    margin: 0 0.5em;
    padding: 0.5em 1em;
    cursor: pointer;
}

#backdrop {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    z-index: 999;
}

#backdrop.active {
    display: block;
}

.shadow-box {
    background: #FFF;
    color: #000;
    position: fixed;

    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    width: 100%;
    height: 90vh;
    max-width: 35rem;

    z-index: 10000;
    display: flex;
    flex-direction: column;
}

.shadow-box header {
    background-color: #000;
    color: #FFF;
    padding: 0.5rem;
}

.shadow-box header h2 {
    margin: 0;
    padding: 0;
    font-size: 1.5rem;
}

.shadow-box main {
    overflow-y: auto;
    padding: 0.5rem;
}

.shadow-box footer {
    background: var(--black);
    color: var(--white);
    padding: 1rem;
    display: flex;
    gap: 1rem;
}

.shadow-box footer [type="submit"] {
    flex: 1 1 auto;
}

/* Modal styling */
.cookie-modal {
    background: #fff;
    border: 2px solid var(--primary);
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.cookie-category {
    margin-top: 2rem;
}

.cookie-modal>h2 {
    background: var(--black);
    color: var(--white);
    padding: 1rem;
    /* background: rgba(255, 255, 255, 0.8); */
}

.cookie-modal>h2 span {
    color: var(--primary);
}

.cookie-modal .cookie-modal-body {
    padding: 1rem;
}

.cookie-modal .cookie-modal-body h2,
.cookie-modal .cookie-modal-body h3 {
    margin: 0;
    padding: 0;
}

.cookie-modal fieldset {
    display: flex;
    flex-wrap: nowrap;
    gap: 0rem 1rem;
}


.video-placeholder {
    width: 560px;
    height: 315px;
    border: 2px dashed #ccc;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 1em auto;
    text-align: center;
}

.cookie-banner-buttons {
    display: flex;
    justify-content: center;
    gap: 1rem;
    flex-wrap: wrap;
}
/* ... */

